run_file(__dirname, "range.js", { rangeStart: 224, rangeEnd: 227 });
run_file(__dirname, "try-catch.js", { rangeStart: 7, rangeEnd: 8 });
run_file(__dirname, "ignore-indentation.js", {
  rangeStart: 222,
  rangeEnd: 225
});
run_file(__dirname, "nested.js", {
  rangeStart: 0,
  rangeEnd: 37
});
run_file(__dirname, "nested.js", {
  rangeStart: 9,
  rangeEnd: 37
});
run_file(__dirname, "function-declaration.js", {
  rangeStart: 16,
  rangeEnd: 43
});
